Add comments to example document

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="index.js"></script>
   </head>
   <body>
+    <h2>Block with <code>#scrubbyIDone</code> after fallback image</h2>
     <div class="Block" data-viewports-tall="4">
       <div class="Block-media is-fixed">
         <div></div>
@@ -18,7 +19,9 @@
         <div data-mount id="scrubbyIDone"></div>
       </div>
     </div>
+    <h2><code>#testIDnikita</code></h2>
     <div data-mount id="testIDnikita"></div>
+    <h2>Block with <code>#scrubbyIDtwo</code> after fallback image</h2>
     <div class="Block has-right" data-viewports-tall="4">
       <div class="Block-media is-fixed">
         <div></div>
@@ -27,7 +30,9 @@
         <div data-mount id="scrubbyIDtwo"></div>
       </div>
     </div>
+    <h2><code>#testIDmelissa</code></h2>
     <div data-mount id="testIDmelissa"></div>
+    <h2>Block with <code>#scrubbyIDthree</code> after fallback image</h2>
     <div class="Block has-left" data-viewports-tall="4">
       <div class="Block-media is-fixed">
         <div></div>
@@ -36,6 +41,7 @@
         <div data-mount id="scrubbyIDthree"></div>
       </div>
     </div>
+    <h2><code>#testIDsam</code></h2>
     <div data-mount id="testIDsam"></div>
     <script>
       window.dispatchEvent(new CustomEvent('odyssey:api'));
