--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h2>Block with <code>#scrubbyIDone</code> after fallback image</h2>
-    <div class="Block" data-viewports-tall="4">
+    <div class="Block">
       <div class="Block-media is-fixed">
         <div></div>
       </div>
@@ -22,7 +22,7 @@
     <h2><code>#testIDnikita</code></h2>
     <div data-mount id="testIDnikita"></div>
     <h2>Block with <code>#scrubbyIDtwo</code> after fallback image</h2>
-    <div class="Block has-right" data-viewports-tall="4">
+    <div class="Block has-right">
       <div class="Block-media is-fixed">
         <div></div>
       </div>
@@ -33,7 +33,7 @@
     <h2><code>#testIDmelissa</code></h2>
     <div data-mount id="testIDmelissa"></div>
     <h2>Block with <code>#scrubbyIDthree</code> after fallback image</h2>
-    <div class="Block has-left" data-viewports-tall="4">
+    <div class="Block has-left">
       <div class="Block-media is-fixed">
         <div></div>
       </div>
