Add scrubby example four

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,16 @@
     </div>
     <h2><code>#testIDsam</code></h2>
     <div data-mount id="testIDsam"></div>
+    <h2>Block with <code>#scrubbyIDfour</code> after fallback image</h2>
+    <div class="Block">
+      <div class="Block-media is-fixed">
+        <div></div>
+      </div>
+      <div>
+        <div data-mount id="scrubbyIDfour"></div>
+      </div>
+    </div>
+    <p>End</p>
     <script>
       window.dispatchEvent(new CustomEvent('odyssey:api'));
     </script>
