Add new four. Hide one, two & three

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h2>Block with <code>#scrubbyIDone</code> after fallback image</h2>
+    <!-- <h2>Block with <code>#scrubbyIDone</code> after fallback image</h2>
     <div class="Block">
       <div class="Block-media is-fixed">
         <div></div>
@@ -18,10 +18,8 @@
       <div>
         <div data-mount id="scrubbyIDone"></div>
       </div>
-    </div>
-    <h2><code>#testIDnikita</code></h2>
-    <div data-mount id="testIDnikita"></div>
-    <h2>Block with <code>#scrubbyIDtwo</code> after fallback image</h2>
+    </div> -->
+    <!-- <h2>Block with <code>#scrubbyIDtwo</code> after fallback image</h2>
     <div class="Block has-right">
       <div class="Block-media is-fixed">
         <div></div>
@@ -29,10 +27,8 @@
       <div>
         <div data-mount id="scrubbyIDtwo"></div>
       </div>
-    </div>
-    <h2><code>#testIDmelissa</code></h2>
-    <div data-mount id="testIDmelissa"></div>
-    <h2>Block with <code>#scrubbyIDthree</code> after fallback image</h2>
+    </div> -->
+    <!-- <h2>Block with <code>#scrubbyIDthree</code> after fallback image</h2>
     <div class="Block has-left">
       <div class="Block-media is-fixed">
         <div></div>
@@ -40,9 +36,7 @@
       <div>
         <div data-mount id="scrubbyIDthree"></div>
       </div>
-    </div>
-    <h2><code>#testIDsam</code></h2>
-    <div data-mount id="testIDsam"></div>
+    </div> -->
     <h2>Block with <code>#scrubbyIDfour</code> after fallback image</h2>
     <div class="Block">
       <div class="Block-media is-fixed">
@@ -52,7 +46,12 @@
         <div data-mount id="scrubbyIDfour"></div>
       </div>
     </div>
-    <p>End</p>
+    <h2><code>#testIDnikita</code></h2>
+    <div data-mount id="testIDnikita"></div>
+    <h2><code>#testIDmelissa</code></h2>
+    <div data-mount id="testIDmelissa"></div>
+    <h2><code>#testIDsam</code></h2>
+    <div data-mount id="testIDsam"></div>
     <script>
       window.dispatchEvent(new CustomEvent('odyssey:api'));
     </script>
