Add stagesblank scrubby, with right-aligned example

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
         <div data-mount id="scrubbyIDstages"></div>
       </div>
     </div>
+    <h2>Block with <code>#scrubbyIDstagesblank</code> after fallback image</h2>
+    <div class="Block has-left">
+      <div class="Block-media is-fixed">
+        <div></div>
+      </div>
+      <div>
+        <div data-mount id="scrubbyIDstagesblank"></div>
+      </div>
+    </div>
     <h2><code>#testIDnikita</code></h2>
     <div data-mount id="testIDnikita"></div>
     <h2><code>#testIDmelissa</code></h2>
