Swap in stagesprogress scrubby

--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,13 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h2>Block with <code>#scrubbyIDstages</code> after fallback image</h2>
+    <h2>Block with <code>#scrubbyIDstagesprogress</code> after fallback image</h2>
     <div class="Block">
       <div class="Block-media is-fixed">
         <div></div>
       </div>
       <div>
-        <div data-mount id="scrubbyIDstages"></div>
-      </div>
-    </div>
-    <h2>Block with <code>#scrubbyIDstagesblank</code> after fallback image</h2>
-    <div class="Block has-left">
-      <div class="Block-media is-fixed">
-        <div></div>
-      </div>
-      <div>
-        <div data-mount id="scrubbyIDstagesblank"></div>
+        <div data-mount id="scrubbyIDstagesprogress"></div>
       </div>
     </div>
     <h2><code>#testIDnikita</code></h2>
