Support vector scrubbys

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
     <script src="index.js"></script>
   </head>
   <body>
+    <h2>Block with <code>#scrubbyIDstagesvector</code> after fallback image</h2>
+    <div class="Block">
+      <div class="Block-media is-fixed">
+        <div></div>
+      </div>
+      <div>
+        <div data-mount id="scrubbyIDstagesvector"></div>
+      </div>
+    </div>
     <h2>Block with <code>#scrubbyIDstages</code> after fallback image</h2>
     <div class="Block">
       <div class="Block-media is-fixed">
