Re-configure public assets so that a build for Apple News would be self-contained (baked-in ABC fonts, etc.). Add a script to build assets for Apple News (removing unused assets). Only show Test's continue reading text when not embedded.

--- a/public/embed-test-nikita.html
+++ b/public/embed-test-nikita.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>embed-test-nikita | olympics-2021-diving</title>
-    <link rel="stylesheet" href="https://www.abc.net.au/res/fonts/abcsans/font.css" />
-    <link rel="stylesheet" href="https://www.abc.net.au/res/fonts/abcserif/font.css" />
     <link rel="stylesheet" href="base.css" />
   </head>
   <body>
-    <div id="embed" data-id="nikita" style="padding: 0.75rem"></div>
-    <script src="embed-test.js"></script>
+    <div id="embed" data-component="test" data-id="nikita" style="padding: 0.75rem"></div>
+    <script src="embeds.js"></script>
   </body>
 </html>
