Add hero illustration.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <script src="index.js"></script>
   </head>
   <body>
+    <div class="Header-content">
+      <h1>olympics-2021-diving</h1>
+      <div data-mount id="hero"></div>
+    </div>
     <h2><code>#testIDnikita</code></h2>
     <div data-mount id="testIDnikita"></div>
     <h2><code>#testIDmelissa</code></h2>
