--- a/public/embed-test-nikita.html
+++ b/public/embed-test-nikita.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" manifest="index.manifest">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
     <title>embed-test-nikita | olympics-2021-diving</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
     <link rel="stylesheet" href="base.css" />
   </head>
   <body>
     <div id="embed" data-component="test" data-id="nikita" style="padding: 0.75rem"></div>
-    <script src="embeds.js"></script>
+    <script type="text/javascript" src="embeds.js"></script>
   </body>
 </html>
