--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>olympics-2021-diving</title>
     <link rel="stylesheet" href="base.css" />
-    <link rel="stylesheet" href="mock-odyssey-styles.css" />
+    <link rel="stylesheet" href="index.html.css" />
     <script src="index.js"></script>
   </head>
   <body>
@@ -29,7 +29,7 @@
       </div>
     </div>
     <h2>Standalone Test embeds (<code>&lt;iframe&gt;</code> height = 286px)</h2>
-    <ul>
+    <ul id="embeds">
       <li>
         <a href="embed-test-nikita.html">Test: Nikita</a>
         <iframe frameborder="0" style="display: block" src="embed-test-nikita.html" height="286px"></iframe>
